修复`TimeoutError`对象无法通过`instanceof`识别的问题.

--- a/src/tsconfig.es5.json
+++ b/src/tsconfig.es5.json
@@ -23,7 +23,7 @@
         "strictMetadataEmit": true,
         "skipTemplateCodegen": true,
         "flatModuleOutFile": "strict.js",
-        "flatModuleId": "@huajie-ng/common"
+        "flatModuleId": "@huajie-ng/strict"
     },
     "files": [
         "./index.ts"
